Fixed navbar dropdown z-index

--- a/src/components/home/css/header.css
+++ b/src/components/home/css/header.css
@@ -261,6 +261,7 @@ nav ul li a:hover {
     .wrapper {
         width: 100vw;
         left:0px;
+        z-index: 100;
     }
 
 }
